[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sova-sdk"
version = "0.1.0"
description = "Python SDK for Sova Network MEV infrastructure on TON blockchain"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Sova Network"}
]
dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "pynacl>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/sova-network/sova-sdk-python"
Repository = "https://github.com/sova-network/sova-sdk-python"

[tool.setuptools.packages.find]
where = ["."]
include = ["sova_sdk*"]
